Samples section updated
Samples section updated

--- a/src/pages/arboviruses.html
+++ b/src/pages/arboviruses.html
@@ -36,7 +36,7 @@
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Arbovirus PCR test and Serology results.</p>
+          <p class="vf-summary__text">Arbovirus PCR test and Serology results</p>
           <p><a label="Arbovirus PCR test and Serology results" href="./arboviruses_in_birds.html" class="vf-link">3 studies ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
@@ -48,7 +48,7 @@
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Protein microarray and FRNT results.</p>
+          <p class="vf-summary__text">Protein microarray and FRNT results</p>
           <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
@@ -60,7 +60,7 @@
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">USUV sequences.</p>
+          <p class="vf-summary__text">USUV sequences</p>
           <p><a label="128 records" href="./sequences.html" class="vf-link">128 records ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
@@ -72,7 +72,7 @@
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Viral isolates.</p>
+          <p class="vf-summary__text">Viral isolates</p>
           <p><a label="0 records" href="./isolates.html" class="vf-link">3 viral isolates ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
@@ -84,8 +84,8 @@
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Sample biobank.</p>
-          <p><a label="30495 samples" href="./samples.html" class="vf-link">30495 samples ></a></p>
+          <p class="vf-summary__text">Wildlife biobank</p>
+          <p><a label="30495 samples" href="./samples.html" class="vf-link">36842 samples ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
@@ -190,7 +190,7 @@
         </div>
       </section>
       <div class="vf-component__container">
-        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="mailto:info@pathogensportal.nl">
+        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="./sharedata.html">
           <h3 class="vf-box__heading">Share new pathogens data  ></h3> 
           <p class="vf-box__text vf-text-body--2">Contact our curator teams, who will assist you with submitting your data to EMBL-EBI repositories ></p>
         </a>
