--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -40,6 +40,9 @@
             <li class="vf-navigation__item">
               <a href="mailto:info@pathogensportal.nl"  label="Contact" class="vf-navigation__link">Contact </a>
             </li>
+			            <li class="vf-navigation__item">
+              <a href="./sharedata.html"  label="Share data" class="vf-navigation__link">Share data </a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -67,7 +70,7 @@
               <a label="Isolates" title="Sub Nav 4" href="#" class="vf-navigation__link"> Isolates&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Samples" title="Sub Nav 5" href="#" class="vf-navigation__link">Samples&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+              <a label="Samples" title="Sub Nav 5" href="./samples.html" class="vf-navigation__link">Samples&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
 			<li class="vf-navigation__item">
               <a label="Literature" title="Sub Nav 6" href="./literature.html" class="vf-navigation__link">Literature&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
