--- a/src/pages/samples.html
+++ b/src/pages/samples.html
@@ -13,19 +13,19 @@
 	<br>
 	<br>
 	<h3>Introduction samples</h3>
-	<p>Content Overview: A list of 30495 samples of wild birds categorized by swabs, feathers and sera. Locations and age are available upon request, as are USUV and WNV (serology and molecular) test results. We also have longitudinal samples of the same males, also upon request. </p>
+	<p>Samples of free ranging live birds in the Netherlands, 2016-2022. These samples are part of a surveillance program for arboviruses in birds in the Netherlands, 2016-2022. Here we offer sera, swabs (pooled throat and cloaca) and feathers of wild birds. Location, date of sampling and species information is available. Further information on the individual birds as well as test results can be found in the serology section of this portal, or can be provided upon request.</p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
-	<h4>Available Data</h2>
+	<h3>Available Data</h3>
 	
-	<h4><a href="BIOSTUDIES LINK TO SAMPLES">Wildbird swabs|feathers|sera 2016-2024 biobank nov 2024</a></h4>
+	<h3><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1769">Samples of free ranging live birds in the Netherlands, 2016-2022</a></h3>
 	<br>
 	
 	      <div class="vf-component__container">
         <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="mailto:info@pathogensportal.nl">
           <h3 class="vf-box__heading">Request samples ></h3> 
-          <p class="vf-box__text vf-text-body--2">More data is available upon request, please contact our team ></p>
+          <p class="vf-box__text vf-text-body--2">You can request samples via info@pathogens.nl by providing the desired sample barcode. ></p>
         </a>
       </div>
 	  
