--- a/src/pages/sharedata.html
+++ b/src/pages/sharedata.html
@@ -1,87 +1,67 @@
 
-@@include('./header - landing page.html')
+@@include('./header.html')
+	<br>
+	<br>
+<p>
+
+<h3>Share data</h3>
+<p>We encourage the Dutch research community to share their data in line with the FAIR1 Data Principles, to promote Findability, Accessibility, Interoperability, and Reusability of research data. 
+You can do this by depositing your research data with publicly accessible digital repositories that are part of evaluation-based initiatives and accreditation processes2,3. This portal helps you identify recommended databases for depositing your data, ensuring compliance with best practices in data sharing. 
+<p>You can explore these resources here:</p>
+
+<p>
+<a href="https://fairsharing.org/search?fairsharingRegistry=Database"> FAIRsharing: Databases</a>
+</p>
+<p>
+<a href="https://elixir-europe.org/platforms/data/elixir-deposition-databases"> ELIXIR Deposition Databases for Biomolecular Data</a>
+</p>
+ 
+</p>
+<br>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Numbered List</title>
+</head>
+<body>
+    <ol>
+        <li>Wilkinson MD, Dumontier M, Aalbersberg IJ, Appleton G, Axton M, Baak A, et al. The FAIR Guiding Principles for scientific data management and stewardship. Sci Data. 2016;3:160018.</li>
+        <li>Lin D, Crabtree J, Dillo I, Downs RR, Edmunds R, Giaretta D, et al. The TRUST Principles for digital repositories. Sci Data. 2020;7(1):144.</li>
+        <li>ELIXIR. ELIXIR Core Data Resources: ELIXIR Europe; <a href="https://elixir-europe.org/platforms/data/core-data-resources/" target="_blank">Available from: https://elixir-europe.org/platforms/data/core-data-resources/</a></li>
+    </ol>
+</body>
 
 
 <br>
 <br>
 <br>
-<h3>Introduction Pathogens Portal Netherlands</h3>
-<p>Pathogens Portal Netherlands provides information about available datasets, resources, tools and services related to pathogens research in the Netherlands.  This portal is complimentary to the Pathogens Portal (Pathogens) with the aim to showcase and provide quick access to a collection of biomolecular and other pathogen related data for open science from Dutch institutions and collaborations .  The first datasets that are made available are from Arboviruses, with others like Mpox to follow. We encourages Dutch researchers to share their data in compliance with the FAIR Data Principles, which promote the Findability, Accessibility, Interoperability, and Reusability of data, using publicly accessible and FAIR digital repositories . See more details under the section “Share Data”. For more questions regarding data sharing via this portal contact info@pathogensportal.nl.</p>
-
 <br>
-<h3>Acknowledgement</h3>
-<p>All publications using data or other content from Pathogens Portal Netherlands should include an acknowledgement to show that services of this portal: www.pathogensportal.nl have been used. Where datasets were used to conduct research, please acknowledge the original authors and their primary publications that are associated with the datasets.</p>
-
-
-<!--<div class="vf-body">
+<!-- <div class="vf-body">
   <section class="vf-intro | embl-grid embl-grid--has-centered-content vf-u-margin__top--800 vf-u-margin__bottom--600">
-    <!--<div> empty </div>
+    <div><!-- empty </div>
     <div>
-      <p id="page-intro" class="vf-intro__text"></p>
+      <p id="page-intro" class="vf-intro__text">Loerm ipsum some dummy text, Loerm ipsum some dummy text Loerm ipsum some dummy text</p>
     </div>
   </section>
-<!-- Main intro   <hr>
+
   <section class="vf-summary-container | embl-grid embl-grid--has-centered-content">
     <div class="vf-section-header">
-      <h2 class="vf-section-header__heading">Arboviruses</h2>
-    </div>-->
+      <h2 class="vf-section-header__heading">Section A</h2>
+    </div>
 
-	<!-- Main intro -->
-<hr>
-	<div class="vf-body">
-  <div class="vf-grid | vf-grid__col-3 vf-grid--has-sidebar vf-u-margin__top--800">
-    <div class="vf-container__content vf-content vf-grid__col--span-2">
-      <div class="vf-grid | vf-grid__col-2">
-        <!-- Main blocks -->
-        <article class="vf-summary vf-u-padding__right--600">
-       
-
-
-	   <div class="vf-section-header">
-            <a label="arboviruses" href="./arboviruses.html" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Arboviruses
-              <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
-              </svg>
-            </a>
-          </div>
-          <p class="vf-summary__text">Pathogens Portal Netherlands - Arboviruses page. </p>
-           <a label="CV19-PORTAL" class="vf-logo__image" href="./arboviruses.html">
-          <img width="600" src="./images/CV19DP_banner subpage.jpg" alt="Pathogens Portal NL">
-        </article>
-        <!-- Main blocks <article class="vf-summary vf-u-padding__right--600">
-          <div class="vf-section-header">
-            <a label="Arbovirus Serology raw data in birds" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              MPOX
-              <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
-              </svg>
-            </a>
-          </div>
-	
-	
     <div class="vf-section-content">
       <article class="vf-summary">
-        <p class="vf-summary__text">Will be made available in Q1 2025.</P>
-		<br>
-		<P>Click on the image below to go to the Arboviruses page:</p>
- <a label="CV19-PORTAL" class="vf-logo__image" href="./index arbo.html">
-          <img width="600" src="./images/CV19DP_banner subpage.jpg" alt="Pathogens Portal NL">
-          <!-- <span class="vf-logo__text">Covid 19 Portal</span>-->
-        </a>
-<br>
-<br>
-		<!--         <figure class="vf-figure">
-          <a href="./images/CV19DP_banner subpage.jpg"><img src="{{section.img.url}}" title="ome" alt="some img title"></a>
-        </figure>-->
+        <p class="vf-summary__text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla</p>
+        <figure class="vf-figure">
+          <a href="#"><img src="{{section.img.url}}" title="some img title" alt="some img title"></a>
+        </figure>
       </article>
     </div>
   </section>
-  </div>
 
-<!--  
-    <base href="https://visual-framework.github.io/vf-covid19-boilerplate/">
- 
   <section class="vf-summary-container | embl-grid embl-grid--has-centered-content">
     <div class="vf-section-header">
       <h2 class="vf-section-header__heading">Section B</h2>
@@ -136,8 +116,6 @@
     </div>
   </section>
 </div>
- -->
-</div>
-<hr>
 
- @@include('./footer.html')
+
+@@include('./footer.html')
