Big change new data
Louella and Eleanor data
Bird ID changes from NIOO
DWHC changes

--- a/src/pages/experimentaldata.html
+++ b/src/pages/experimentaldata.html
@@ -12,21 +12,26 @@
 	<br>
 	<br>
 	<br>
-	<h3>Introduction arboviruses in birds and mosquitos</h3>
-	<p>This section contains data from four studies. Surveillance for arboviruses in birds in the Netherlands, 2016-2022 and a study of arboviruses in mosquitoes at bird ringing sites in the Netherlands, 2020-2022.</p>
+	<h4>Introduction Experimental data</h4>
+	<p>This section contains data from two studies. Differential susceptibility of human motor neurons to infection with Usutu and West Nile virus and Differential susceptibility of human motor neurons to infection with Usutu and West Nile virus.</p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
-	<h4>Available data Surveillance for arboviruses in birds in the Netherlands, 2016-2022:</h4>
-	<p>These studies are a part of a surveillance program for arboviruses in birds in the Netherlands, 2016-2022. The first study is from birds in captivity and includes information on date of death and sampling, location, birds species and molecular testing results for Usutu virus (USUV). The second study is from free ranging live birds and includes information on date and location of sampling, birds species and molecular testing results for Usutu virus (USUV) and West Nile virus (WNV). The third study is from free ranging dead birds and includes information on date and location of sampling, birds species and molecular testing results for Usutu virus (USUV) and West Nile virus (WNV).
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1505">Surveillance for arboviruses in birds in captivity in the Netherlands, 2016-2022</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1522">Surveillance for arboviruses in free ranging live birds in the Netherlands, 2016-2022</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1523">Surveillance for arboviruses in free ranging dead birds in the Netherlands, 2016-2022</a></h4>
+	<h4>Available data Differential susceptibility of human motor neurons to infection with Usutu and West Nile virus 	 	</h2>
+	<p>Study to identify the susceptibility of human iPSC derived cortical and motor neurons to infection with USUV and WNV, with assessment of the underlying antiviral response.</p>
+
+	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1854">Differential susceptibility of human motor neurons to infection with Usutu and West Nile virus</a></h4>
 	<br>
+	
 	<br>
-	<h4>Available data Study of arboviruses in mosquitoes at bird ringing sites in the Netherlands, 2020-2022.</h4>
-	<p>This study is part of a broader research effort on arboviruses in humans, wildlife, and captive birds in the Netherlands. The data here is from mosquitoes and includes information on sampling dates and locations, mosquito species, and molecular testing results for Usutu virus (USUV) and West Nile virus (WNV) from 2020 to 2022.</p>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1868">Study of arboviruses in mosquitoes at bird ringing sites in the Netherlands, 2020-2022.</a></h4>
+	<h4>Available data: Usutu virus and West Nile virus use a transcellular route of neuroinvasion across an in vitro model of the human blood–brain barrier</h2>
+	<p>Study to identify the mode of invasion across an in vitro human blood-brain barrier by Usutu and West Nile virus
+
+This study reports secondary objectives of a prospective observational study in adults hospitalized with an arbovirus-compatible disease syndrome in 21 hospitals in seven countries in southeast Europe over four arbovirus seasons (1 May 2016 - 31 October 2019). In this study, given the challenges in arbovirus diagnostics, we developed a diagnostic interpretation algorithm taking into account the (serological) outcomes and sample timing to study arbovirus prevalence in southeast Europe. We used enzyme-linked immunosorbent assay (ELISA) and custom-printed protein microarrays to simultaneously detect serum antibodies against Crimean-Congo haemorrhagic fever virus (CCHFV), tick-borne encephalitis virus (TBEV), Toscana virus (TOSV) and West Nile virus (WNV), followed by confirmation assays (virus neutralization test (VNT) or Indirect immunofluorescence test (IIFT)). Patients were sampled on day 0, 7, 28 and 60 post-hospital admission.
+
+This data encompasses the ELISA, protein microarray, VNT and IIFT data of CCHFV, TBEV, TOSV, WNV and USUV, for each included patient, country and year. Furthermore, it contains information about the sampling dates, estimated days post symptom onset (dpso) as well as its diagnostic interpretation according to the developed diagnostic interpretation algorithm.</p>
+
+	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1855">Usutu virus and West Nile virus use a transcellular route of neuroinvasion across an in vitro model of the human blood–brain barrier</a></h4>
 	<br>
 	<!-- <ul>
 		<li>Et tortor consequat id porta</li>
