--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -58,22 +58,29 @@
         <nav  class="vf-navigation vf-navigation--main">
           <ul class="vf-navigation__list | vf-list--inline">
             <li class="vf-navigation__item">
-              <a label="Arboviruses in birds" title="Sub Nav 1" href="./arboviruses_in_birds.html" class="vf-navigation__link">Arboviruses in birds&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+              <a label="Arboviruses in birds" title="Arboviruses" href="./arboviruses_in_birds.html" class="vf-navigation__link">Arboviruses&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Arbovirus serology in birds" title="Sub Nav 2" href="#" class="vf-navigation__link">Arbovirus Serology raw data in birds&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+              <a label="One Health arbovirus serology" title="Sub Nav 2" href="./serology.html" class="vf-navigation__link">Serology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Sequences" title="Sub Nav 3" href="./sequences.html" class="vf-navigation__link">Sequences&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+              <a label="Sequences" title="Sequences" href="./sequences.html" class="vf-navigation__link">Sequences&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Isolates" title="Sub Nav 4" href="#" class="vf-navigation__link"> Isolates&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+              <a label="Isolates" title="Isolates" href="./isolates.html" class="vf-navigation__link"> Isolates&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Samples" title="Sub Nav 5" href="./samples.html" class="vf-navigation__link">Samples&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+              <a label="Samples" title="Samples" href="./samples.html" class="vf-navigation__link">Samples&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
 			<li class="vf-navigation__item">
-              <a label="Literature" title="Sub Nav 6" href="./literature.html" class="vf-navigation__link">Literature&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+              <a label="Experimental data" title="Experimental data" href="./experimentaldata.html" class="vf-navigation__link">Experimental data&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            </li>
+			<li class="vf-navigation__item">
+              <a label="Literature" title="Literature" href="./literature.html" class="vf-navigation__link">Literature&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            </li>
+		   </li>
+			<li class="vf-navigation__item">
+              <a label="MosquitoWise survey" title="Survey" href="./survey.html" class="vf-navigation__link">Survey&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
 		  </ul>
         </nav>
