--- a/src/pages/literature.html
+++ b/src/pages/literature.html
@@ -18,7 +18,7 @@
 	empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
 	<h3>Introduction literature</h3>
-	<p>We present here a dataset resulting from a systematic literature review, executed in 2024. The dataset includes bird species with serological and/or molecular evidence of West Nile virus (WNV) and Usutu virus (USUV) infections. The dataset on bird species that serve as hosts for WNV and USUV is presented in an Excel file. This file consists of three spreadsheets named:
+	<p>At the end of 2025 we will present here a dataset resulting from a systematic literature review, executed in 2024. The dataset includes bird species with serological and/or molecular evidence of West Nile virus (WNV) and Usutu virus (USUV) infections. The dataset on bird species that serve as hosts for WNV and USUV is presented in an Excel file. This file consists of three spreadsheets named:
 
 extracted_data: contains data extracted from the reviewed paper or thesis, as well as included variables
 cut_off: describes cutoff for positivity in research papers describing serological results
@@ -26,7 +26,7 @@ metadata: defines the variables included in the first sheet
 overview_geographic_regions: a map highlighting geographic regions that were part of the literature review.</p>
 	<br>
 	<h3>A literature-based dataset of bird species hosts of or susceptible to MDBs</h3>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1630?key=1e0acd4d-1da3-4da2-8875-37f4e8da8dbc">Link to literature-based dataset</a></h4>
+	<h4><!--<a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1630?key=1e0acd4d-1da3-4da2-8875-37f4e8da8dbc">-->Link to literature-based dataset is expected Q4 2025</a></h4>
 	<br>
 	<h3>Europe PMC advanced literature search</h3>
 	<h4><a href="https://europepmc.org/betaAdvanceSearch">https://europepmc.org/betaAdvanceSearch</a></h4>
