--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,7 +25,7 @@
 <!--<h3>Introduction Pathogens Portal Netherlands</h3>-->
 <br>
 <br>
-<p>Pathogens Portal Netherlands provides information about available datasets, resources, tools and services related to pathogens research in the Netherlands.  This portal is complimentary to the Pathogens Portal (Pathogens) with the aim to showcase and provide quick access to a collection of biomolecular and other pathogen related data for open science from Dutch institutions and collaborations .  The first datasets that are made available are from Arboviruses, with others like Mpox to follow. We encourages Dutch researchers to share their data in compliance with the FAIR Data Principles, which promote the Findability, Accessibility, Interoperability, and Reusability of data, using publicly accessible and FAIR digital repositories . See more details under the section “Share Data”. For more questions regarding data sharing via this portal contact info@pathogensportal.nl.</p>
+<p>Pathogens Portal Netherlands provides information about available datasets, resources, tools and services related to pathogens research in the Netherlands.  This portal is complimentary to the Pathogens Portal (Pathogens) with the aim to showcase and provide quick access to a collection of biomolecular and other pathogen related data for open science from Dutch institutions and collaborations .  The first datasets that are made available are from Arboviruses, with others like Mpox to follow. We encourages Dutch researchers to share their data in compliance with the FAIR Data Principles, which promote the Findability, Accessibility, Interoperability, and Reusability of data, using publicly accessible and FAIR digital repositories . See more details under the section “Share Data”. For more questions regarding data sharing via this portal contact pathogensportalnl@erasmusmc.nl.</p>
 <hr>
 	<div class="vf-body">
   <div class="vf-grid | vf-grid__col-3 vf-grid--has-sidebar vf-u-margin__top--800">
@@ -164,7 +164,7 @@
  -->
 </div>
 	      <div class="vf-component__container">
-        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--green--dark" href="mailto:info@pathogensportal.nl">
+        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--green--dark"href="mailto:pathogensportalnl@erasmusmc.nl">
           <h3 class="vf-box__heading">Acknowledgement</h3> 
           <p class="vf-box__text vf-text-body--2">All publications using data or other content from Pathogens Portal Netherlands should include an acknowledgement to show that services of this portal: www.pathogensportal.nl have been used. Where datasets were used to conduct research, please acknowledge the original authors and their primary publications that are associated with the datasets.</p>
         </a>
