--- a/src/pages/samples.html
+++ b/src/pages/samples.html
@@ -23,9 +23,9 @@
 	<br>
 	
 	      <div class="vf-component__container">
-        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="mailto:info@pathogensportal.nl">
+        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="mailto:pathogensportalnl@erasmusmc.nl">
           <h3 class="vf-box__heading">Request samples ></h3> 
-          <p class="vf-box__text vf-text-body--2">You can request samples via info@pathogens.nl by providing the desired sample barcode. ></p>
+          <p class="vf-box__text vf-text-body--2">You can request samples via pathogensportalnl@erasmusmc.nl by providing the desired sample barcode. ></p>
         </a>
       </div>
 	  
