Extra serology study
Kiki study serology added

--- a/src/pages/serology.html
+++ b/src/pages/serology.html
@@ -13,11 +13,11 @@
 	<br>
 	<br>
 	<h4>Introduction Serology</h4>
-	<p>This section contains data from two studies. Serosurveillance for arboviruses in free-ranging live birds in the Netherlands, 2016-2022 and Multiantigen serology and a diagnostic algorithm for the detection of arbovirus infections as novel tools for arbovirus preparedness in southeast Europe: a prospective observational study.</p>
+	<p>This section contains data from three studies. Serosurveillance for arboviruses in free-ranging live birds in the Netherlands (2016-2022), Multiantigen serology and a diagnostic algorithm for the detection of arbovirus infections as novel tools for arbovirus preparedness in southeast Europe: a prospective observational study and Field serology of petting zoo and poultry chicken in the Netherlands (2020-2022).</p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
-	<h4>Available data Serosurveillance for arboviruses in free-ranging live birds in the Netherlands, 2016-2022</h2>
+	<h4>Available data Serosurveillance for arboviruses in free-ranging live birds in the Netherlands (2016-2022)</h2>
 	<p>This study is part of a broader research effort on arboviruses in humans, wildlife, and captive birds in the Netherlands. The data here is from free-ranging live birds and includes information on date and location of sampling, birds species and serological testing results for Usutu virus (USUV) and (WNV) from 2016 to 2022.</p>
 
 	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1867">Serosurveillance for arboviruses in free-ranging live birds in the Netherlands, 2016-2022</a></h4>
@@ -31,6 +31,12 @@ This data encompasses the ELISA, protein microarray, VNT and IIFT data of CCHFV,
 
 	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1853">Multiantigen serology and a diagnostic algorithm for the detection of arbovirus infections as novel tools for arbovirus preparedness in southeast Europe: a prospective observational study</a></h4>
 	<br>
+	<h4>Field serology of petting zoo and poultry chicken in the Netherlands (2020-2022)</h2>
+	<p>This dataset describes the results of a repeated serosurvey of petting zoo and backyard chickens in the Netherlands to study the circulation of Orthoflaviviruses West Nile Virus (WNV) and Usutu virus (USUV). The study was carried out in three sampling rounds (called "phases") between the 1st of October 2020 and the 1st of June 2022. Sampling was conducted at 23 and 13 locations in two regions where WNV had been detected in 2020. Additionally, volunteer bird ringers sent in samples of backyard chickens from other locations. The dataset includes the ID for individual birds, date of sampling, phase of sampling, location code and serological results of the serological screening (Protein Microarray) and confirmation (Focus Reduction Neutralization Test and Virus Neutralization Test) tests. </p>
+
+	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1890">Field serology of petting zoo and poultry chicken in the Netherlands (2020-2022)</a></h4>
+	<br>
+	
 	<!-- <ul>
 		<li>Et tortor consequat id porta</li>
 		<li>At ultrices mi tempus imperdiet nulla</li>
