--- a/src/pages/arboviruses.html
+++ b/src/pages/arboviruses.html
@@ -60,7 +60,7 @@
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">USUV sequences</p>
+          <p class="vf-summary__text">USUV and WNV sequences</p>
           <p><a label="128 records" href="./sequences.html" class="vf-link">128 records ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
