--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -38,7 +38,7 @@
               <a href="#" class="vf-navigation__link" label="Link 3"> Partners</a>
             </li>-->
             <li class="vf-navigation__item">
-              <a href="mailto:info@pathogensportal.nl"  label="Contact" class="vf-navigation__link">Contact </a>
+              <a href="mailto:pathogensportalnl@erasmusmc.nl"  label="Contact" class="vf-navigation__link">Contact </a>
             </li>
 			            <li class="vf-navigation__item">
               <a href="./sharedata.html"  label="Share data" class="vf-navigation__link">Share data </a>
@@ -61,7 +61,7 @@
               <a label="Arboviruses in birds" title="Arboviruses" href="./arboviruses_in_birds.html" class="vf-navigation__link">Arboviruses&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="One Health arbovirus serology" title="Sub Nav 2" href="./serology.html" class="vf-navigation__link">Serology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+              <a label="One Health arbovirus serology" title="Serology" href="./serology.html" class="vf-navigation__link">Serology&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
               <a label="Sequences" title="Sequences" href="./sequences.html" class="vf-navigation__link">Sequences&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
