--- a/src/pages/literature.html
+++ b/src/pages/literature.html
@@ -26,7 +26,7 @@ metadata: defines the variables included in the first sheet
 overview_geographic_regions: a map highlighting geographic regions that were part of the literature review.</p>
 	<br>
 	<h3>A literature-based dataset of bird species hosts of or susceptible to MDBs</h3>
-	<h4><!--<a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1630?key=1e0acd4d-1da3-4da2-8875-37f4e8da8dbc">-->Link to literature-based dataset is expected Q4 2025</a></h4>
+	<h4><!--<a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1630?key=1e0acd4d-1da3-4da2-8875-37f4e8da8dbc">-->Publication is expected in Q4 2025</a></h4>
 	<br>
 	<h3>Europe PMC advanced literature search</h3>
 	<h4><a href="https://europepmc.org/betaAdvanceSearch">https://europepmc.org/betaAdvanceSearch</a></h4>
